src/manipulator/snapshots/annatto__manipulator__visualize__tests__dot_single_sentence_full.snap
---
source: src/manipulator/visualize.rs
expression: result_dot
---
digraph G {
  subgraph token {
    rank=same
    6[shape=box label="single_sentence/zossen#t1\n \nannis:tok=Die\nannis:layer=default_layer\nannis:node_type=node\ndefault_ns:pos=ART"]
    7[shape=box label="single_sentence/zossen#t2\n \nannis:tok=Jugendlichen\nannis:layer=default_layer\nannis:node_type=node\ndefault_ns:pos=NN\nannis:tok-whitespace-before= "]
    9[shape=box label="single_sentence/zossen#t3\n \nannis:tok=in\nannis:layer=default_layer\nannis:node_type=node\ndefault_ns:pos=APPR\nannis:tok-whitespace-before= "]
    10[shape=box label="single_sentence/zossen#t4\n \nannis:tok=Zossen\nannis:layer=default_layer\nannis:node_type=node\ndefault_ns:pos=NE\nannis:tok-whitespace-before= "]
    11[shape=box label="single_sentence/zossen#t5\n \nannis:tok=wollen\nannis:layer=default_layer\nannis:node_type=node\ndefault_ns:pos=VMFIN\nannis:tok-whitespace-before= "]
    13[shape=box label="single_sentence/zossen#t6\n \nannis:tok=ein\nannis:layer=default_layer\nannis:node_type=node\ndefault_ns:pos=ART\nannis:tok-whitespace-before= "]
    14[shape=box label="single_sentence/zossen#t7\n \nannis:tok=Musikcafé\nannis:layer=default_layer\nannis:node_type=node\ndefault_ns:pos=NN\nannis:tok-whitespace-before= "]
    15[shape=box label="single_sentence/zossen#t8\n \nannis:tok=.\nannis:layer=default_layer\nannis:node_type=node\ndefault_ns:pos=$.\nannis:tok-whitespace-before= "]
  }
  2[shape=box label="single_sentence/zossen#text\n \nannis:node_type=datasource"]
  1[shape=box label="single_sentence/zossen\n \nannis:doc=zossen\nannis:node_type=corpus"]
  0[shape=box label="single_sentence\n \nannis:node_type=corpus"]
  4[shape=box label="single_sentence/zossen#n2\n \nsyntax:cat=S\nannis:layer=syntax\nannis:node_type=node"]
  3[shape=box label="single_sentence/zossen#n1\n \nsyntax:cat=ROOT\nannis:layer=syntax\nannis:node_type=node"]
  5[shape=box label="single_sentence/zossen#n3\n \nsyntax:cat=NP\nannis:layer=syntax\nannis:node_type=node"]
  8[shape=box label="single_sentence/zossen#n4\n \nsyntax:cat=PP\nannis:layer=syntax\nannis:node_type=node"]
  12[shape=box label="single_sentence/zossen#n5\n \nsyntax:cat=NP\nannis:layer=syntax\nannis:node_type=node"]
  3 -> 6 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  3 -> 7 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  3 -> 9 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  3 -> 10 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  3 -> 11 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  3 -> 13 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  3 -> 14 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  3 -> 15 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  4 -> 6 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  4 -> 7 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  4 -> 9 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  4 -> 10 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  4 -> 11 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  4 -> 13 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  4 -> 14 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  5 -> 6 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  5 -> 7 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  5 -> 9 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  5 -> 10 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  8 -> 9 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  8 -> 10 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  12 -> 13 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  12 -> 14 [label="annis/inherited-coverage (C)" color=darkgreen fontcolor=darkgreen style=dotted]
  3 -> 4 [label="syntax/ (>)" color=red fontcolor=red style=solid]
  3 -> 15 [label="syntax/ (>)" color=red fontcolor=red style=solid]
  4 -> 5 [label="syntax/ (>)" color=red fontcolor=red style=solid]
  4 -> 11 [label="syntax/ (>)" color=red fontcolor=red style=solid]
  4 -> 12 [label="syntax/ (>)" color=red fontcolor=red style=solid]
  5 -> 6 [label="syntax/ (>)" color=red fontcolor=red style=solid]
  5 -> 7 [label="syntax/ (>)" color=red fontcolor=red style=solid]
  5 -> 8 [label="syntax/ (>)" color=red fontcolor=red style=solid]
  8 -> 9 [label="syntax/ (>)" color=red fontcolor=red style=solid]
  8 -> 10 [label="syntax/ (>)" color=red fontcolor=red style=solid]
  12 -> 13 [label="syntax/ (>)" color=red fontcolor=red style=solid]
  12 -> 14 [label="syntax/ (>)" color=red fontcolor=red style=solid]
  3 -> 4 [label="syntax/edge (>)" color=red fontcolor=red style=solid]
  3 -> 15 [label="syntax/edge (>)" color=red fontcolor=red style=solid]
  4 -> 5 [label="syntax/edge (>)" color=red fontcolor=red style=solid]
  4 -> 11 [label="syntax/edge (>)" color=red fontcolor=red style=solid]
  4 -> 12 [label="syntax/edge (>)" color=red fontcolor=red style=solid]
  5 -> 6 [label="syntax/edge (>)" color=red fontcolor=red style=solid]
  5 -> 7 [label="syntax/edge (>)" color=red fontcolor=red style=solid]
  5 -> 8 [label="syntax/edge (>)" color=red fontcolor=red style=solid]
  8 -> 9 [label="syntax/edge (>)" color=red fontcolor=red style=solid]
  8 -> 10 [label="syntax/edge (>)" color=red fontcolor=red style=solid]
  12 -> 13 [label="syntax/edge (>)" color=red fontcolor=red style=solid]
  12 -> 14 [label="syntax/edge (>)" color=red fontcolor=red style=solid]
  6 -> 11 [label="dep/ (->)\ndefault_ns:deprel=unknown" color=black fontcolor=black style=solid]
  6 -> 7 [label="annis/ (.)" color=blue fontcolor=blue style=solid]
  7 -> 9 [label="annis/ (.)" color=blue fontcolor=blue style=solid]
  9 -> 10 [label="annis/ (.)" color=blue fontcolor=blue style=solid]
  10 -> 11 [label="annis/ (.)" color=blue fontcolor=blue style=solid]
  11 -> 13 [label="annis/ (.)" color=blue fontcolor=blue style=solid]
  13 -> 14 [label="annis/ (.)" color=blue fontcolor=blue style=solid]
  14 -> 15 [label="annis/ (.)" color=blue fontcolor=blue style=solid]
  3 -> 6 [label="annis/ (LT)" color=dimgray fontcolor=dimgray style=dashed]
  4 -> 6 [label="annis/ (LT)" color=dimgray fontcolor=dimgray style=dashed]
  5 -> 6 [label="annis/ (LT)" color=dimgray fontcolor=dimgray style=dashed]
  8 -> 9 [label="annis/ (LT)" color=dimgray fontcolor=dimgray style=dashed]
  12 -> 13 [label="annis/ (LT)" color=dimgray fontcolor=dimgray style=dashed]
  3 -> 15 [label="annis/ (RT)" color=dimgray fontcolor=dimgray style=dashed]
  4 -> 14 [label="annis/ (RT)" color=dimgray fontcolor=dimgray style=dashed]
  5 -> 10 [label="annis/ (RT)" color=dimgray fontcolor=dimgray style=dashed]
  8 -> 10 [label="annis/ (RT)" color=dimgray fontcolor=dimgray style=dashed]
  12 -> 14 [label="annis/ (RT)" color=dimgray fontcolor=dimgray style=dashed]
  1 -> 0 [label="annis/ (@)" color=gold fontcolor=gold style=solid]
  2 -> 1 [label="annis/ (@)" color=gold fontcolor=gold style=solid]
  6 -> 2 [label="annis/ (@)" color=gold fontcolor=gold style=solid]
  7 -> 2 [label="annis/ (@)" color=gold fontcolor=gold style=solid]
  9 -> 2 [label="annis/ (@)" color=gold fontcolor=gold style=solid]
  10 -> 2 [label="annis/ (@)" color=gold fontcolor=gold style=solid]
  11 -> 2 [label="annis/ (@)" color=gold fontcolor=gold style=solid]
  13 -> 2 [label="annis/ (@)" color=gold fontcolor=gold style=solid]
  14 -> 2 [label="annis/ (@)" color=gold fontcolor=gold style=solid]
  15 -> 2 [label="annis/ (@)" color=gold fontcolor=gold style=solid]
}
