src/manipulator/snapshots/annatto__manipulator__visualize__tests__serialize.snap
---
source: src/manipulator/visualize.rs
expression: serialization.unwrap()
---
limit_tokens = true
token_limit = 10
root = "first_document"
