src/manipulator/snapshots/annatto__manipulator__visualize__tests__serialize_custom.snap
---
source: src/manipulator/visualize.rs
expression: serialization.unwrap()
---
limit_tokens = true
token_limit = 1000
root = "all"
output_dot = "anywhere/out/there.dot"
output_svg = "somewhere/else/maybe.svg"
